fix some spacing

--- a/src/public/css/global/main/main.css
+++ b/src/public/css/global/main/main.css
@@ -57,7 +57,7 @@ html {
 
 .flex-wrapper {
   display: flex;
-  min-height: 100vh;
+  min-height: 80vh;
   flex-direction: column;
   justify-content: space-between;
 }
